[package]
name = "vrcx-insights"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.2", features = ["runtime-async-std", "sqlite", "chrono"] }
indicatif = { version = "0.17.7", features = ["rayon"] }
rayon = { version = "1.8.0" }
async-compat = "0.2.3"
smol = "1.3.0"
serde = { version = "1.0.192", features = ["derive"] }
ron = "0.8.1"
petgraph = "0.6.4"
