[package]
name = "vrcx-insights"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.4", features = ["sqlite", "chrono", "runtime-tokio"] }
serde = { version = "1.0.200", features = ["derive"] }
ron = "0.8.1"
petgraph = "0.6.4"
tokio = { version = "1.37.0", features = ["full", "rt-multi-thread"] }
fuzzy_dbscan = "0.3.0"

[profile.release]
debug = true
