[package]
name = "vrcx-insights"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vrcx_insights"
path = "../../src/lib.rs"

[[bin]]
name = "vrcx-insights"
path = "../../src/main.rs"

[dependencies]
sqlx = { version = "0.7.2", features = ["sqlite", "chrono", "runtime-tokio"] }
serde = { version = "1.0.192", features = ["derive"] }
ron = "0.8.1"
petgraph = "0.6.4"
tokio = { version = "1.36.0", features = ["full", "rt-multi-thread"] }

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[profile.release]
opt-level = 3
